<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="56dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stress_title"
                android:textAllCaps="true"
                android:textColor="#4C5FFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="200dp"
                android:background="@drawable/test_status_bg"
                android:paddingHorizontal="10dp"
                android:paddingVertical="3dp"
                android:text="@string/status_test"
                android:textColor="#FF0000"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/test_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/stress_test_name"
            android:textColor="#2B2B2B"
            android:textSize="21sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/test_clock"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/clock_icon" />

            <TextView
                android:id="@+id/test_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/stress_time"
                android:textColor="#2B2B2B"
                android:textStyle="bold">

            </TextView>
        </LinearLayout>

        <TextView
            android:id="@+id/test_descriptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/stress_test_introductory" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_test"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/test_button_bg"
        android:text="@string/start_test_button"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>