<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/your_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="88dp"
                android:text="Let's setup for Success"
                android:textColor="#656665"
                android:textFontWeight="400"
                android:textSize="30sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="54dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="37dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/your_account" />

                <LinearLayout
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_your_account"
                        android:textColor="#8EBAB3"
                        android:textFontWeight="600"
                        android:textSize="13dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/text_your_account"
                        android:textColor="#454E52"
                        android:textFontWeight="400"
                        android:textSize="12sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="9dp"
                    android:background="@drawable/arrow_button" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/security"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="36dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/security" />

                <LinearLayout
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_security"
                        android:textColor="#8EBAB3"
                        android:textFontWeight="600"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/text_security"
                        android:textColor="#454E52"
                        android:textFontWeight="400"
                        android:textSize="12sp" />


                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="9dp"
                    android:background="@drawable/arrow_button" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/customization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/check_in_custom" />

                <LinearLayout
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_check_in"
                        android:textColor="#8EBAB3"
                        android:textFontWeight="600"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/text_check_in"
                        android:textColor="#454E52"
                        android:textFontWeight="400"
                        android:textSize="12sp" />


                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="9dp"
                    android:background="@drawable/arrow_button" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="37dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/notifications" />

                <LinearLayout
                    android:layout_width="243dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_notifications"
                        android:textColor="#8EBAB3"
                        android:textFontWeight="600"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/text_notifications"
                        android:textColor="#454E52"
                        android:textFontWeight="400"
                        android:textSize="12sp" />


                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="44dp"
                    android:layout_marginTop="9dp"
                    android:background="@drawable/arrow_button" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/accessibility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="33dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/accessibility" />

                <LinearLayout
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_accessibility"
                        android:textColor="#8EBAB3"
                        android:textFontWeight="600"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:text="@string/text_accessibility"
                        android:textColor="#454E52"
                        android:textFontWeight="400"
                        android:textSize="12sp" />


                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="57dp"
                    android:layout_marginTop="9dp"
                    android:background="@drawable/arrow_button" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_changes_button"
                android:layout_width="173dp"
                android:layout_height="46dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="125dp"
                android:layout_marginBottom="72dp"
                android:background="@drawable/home_buttons_bg"
                android:text="@string/save_changes"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textFontWeight="400"
                android:textSize="20sp" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>