<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="56dp"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/tests_image">
        </ImageView>
        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#2D2D2D"
                android:layout_weight="1"
                android:text="@string/tests_info">
            </TextView>
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:src="@drawable/info_icon">
            </ImageView>
        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp">
                <androidx.cardview.widget.CardView
                    android:id="@+id/depression_card_test"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:elevation="4dp"
                    tools:ignore="MissingConstraints">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/depression_title"
                                android:textAllCaps="true"
                                android:textColor="#4C5FFF"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_marginStart="80dp"
                                android:background="@drawable/test_status_bg"
                                android:paddingHorizontal="10dp"
                                android:paddingVertical="3dp"
                                android:text="@string/status_test"
                                android:textColor="#FF0000"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/test_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/depression_test_name"
                            android:textColor="#2B2B2B"
                            android:textSize="21sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/test_descriptions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/depression_description" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/test_clock"
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:src="@drawable/clock_icon" />

                            <TextView
                                android:id="@+id/test_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="@string/depression_time"
                                android:textColor="#2B2B2B"
                                android:textStyle="bold">

                            </TextView>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/anxiety_card_test"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:elevation="4dp"
                    tools:ignore="MissingConstraints">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/anxiety_title"
                                android:textAllCaps="true"
                                android:textColor="#4C5FFF"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_marginStart="80dp"
                                android:background="@drawable/test_status_bg"
                                android:paddingHorizontal="10dp"
                                android:paddingVertical="3dp"
                                android:text="@string/status_test"
                                android:textColor="#FF0000"
                                android:textStyle="bold"/>
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/anxiety_test_name_homepage"
                            android:textColor="#2B2B2B"
                            android:textSize="21sp"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/anxiety_description">

                        </TextView>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:src="@drawable/clock_icon" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="@string/anxiety_time"
                                android:textColor="#2B2B2B"
                                android:textStyle="bold">
                            </TextView>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/stress_card_test"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:elevation="4dp"
                    tools:ignore="MissingConstraints">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/stress_title"
                                android:textAllCaps="true"
                                android:textColor="#4C5FFF"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_marginStart="80dp"
                                android:background="@drawable/test_status_bg"
                                android:paddingHorizontal="10dp"
                                android:paddingVertical="3dp"
                                android:text="@string/status_test"
                                android:textColor="#FF0000"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/stress_test_name"
                            android:textColor="#2B2B2B"
                            android:textSize="21sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/stress_description" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:src="@drawable/clock_icon" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="4 min max"
                                android:textColor="#2B2B2B"
                                android:textStyle="bold">

                            </TextView>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>